--- a/nikos_cafe_streamlit_app/.streamlit/config.toml
+++ b/nikos_cafe_streamlit_app/.streamlit/config.toml
@@ -1,14 +1,11 @@
 [server]
 headless = true
-enableCORS = false
-port = 8501
-
-[browser]
-gatherUsageStats = false
+address = "0.0.0.0"
+port = 5000
 
 [theme]
-base = "light"
-primaryColor = "#0066b2"
-backgroundColor = "#ffffff"
-secondaryBackgroundColor = "#f0f2f6"
+primaryColor = "#3366CC"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
 textColor = "#262730"
+font = "sans serif"
